fix: iOS Safari header gap fix

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -14,7 +14,8 @@ nav {
 .nav-main {
 	margin: 0;
 	padding: 0;
-	display: flex;
+	display: grid;
+	grid-auto-flow: column;
 	list-style: none;
 	column-gap: 1rem;
 
